update schedule, texts

--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -41,12 +41,12 @@
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Mondays, 3:45--4:30 \PM}
+\officehours{Mondays, 3:45--4:45 \PM}
 
 \semester{Fall Term 2018}
 \meets{\Int{Thursdays}{Mondays}}% \meets{on}{at}{in}
       {1:00--3:30 \PM}
-      {Classroom 3}
+      {Flahiff Room}
 \website{astheology.ns.ca}
 \cdescription{% copy from the current Academic Calendar
 	The First Testament of Christian Scripture, also called the Hebrew
@@ -78,7 +78,7 @@
 %		defend a decision to pronounce or circumlocute the divine name;
 		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
 		report on parallel and divergent material across the Law and the Prophets, such as the uses of the Divine Name or the rationales for sabbath observance;
-		classify a variety of ancient and modern approaches to the Bible, including traditional “plain sense” and figural reading strategies as well as historical criticism and its legacy.
+		classify and begin to evaluate a variety of ancient and modern approaches to the Bible.
 
 	Students should also be able to identify settings in which the
 	Scriptures of Israel are read (notably the synagogue, church, and
@@ -114,12 +114,12 @@ have been placed on a 2-hour reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
+\begin{thebibliography}{NRSV}% use the longest item in the bibliography
 
 	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
     \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 5th ed.
     Oxford: Oxford University Press, 2018.
-    ISBN 978-0190276072.
+    ISBN 978-0190276072 (get the hardcover).
 
 	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
 	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
@@ -152,28 +152,28 @@ Supplementary readings will be recommended throughout the semester.
 Excerpts from this literature will either be placed on reserve or made
 available through the course website. Give this material some good
 attention and effort. Some readings may have assignments attached to
-them, but even if not, the selections represent some of the best
-contemporary readers of the HB/OT, and you will not want to miss out on
-their hermeneutical and theological insights.
+them. Even if not, they represent some of the best contemporary readers
+of the HB/OT, and you will not want to miss out on their hermeneutical
+and theological insights.
 
 In addition, the following reference works are worth owning and
 consulting. First, \cite{rlgs} includes sound advice on things like
 reading religious texts, writing essays and book reviews, making oral
 presentations, and learning languages. Second, \cite{sbl2} is a standard
-reference in the field, useful to beginning students and specialists in
-biblical studies alike.
+reference in the field, useful to beginning students and specialists
+alike.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{9}% use the longest item in the bibliography
+\begin{thebibliography}{Making Sense}% use the longest item in the bibliography
 
-	\bibitem{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
 	3rd ed. Don Mills, ON: Oxford University Press, 2019. ISBN 978-0199026838.
 
-	\bibitem{sbl2} Collins, Billie Jean, et al.
+	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
-	2nd ed. Atlanta: SBL Press, 2014. % ISBN 978-1589839649.
+	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649.
 	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{The Chicago Manual of Style}},
 	which is the standard at AST, there is also a free
 	“\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for \emph{The SBL Handbook of Style}, Second Edition}.”
@@ -202,28 +202,29 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & \Int{14}{12} Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{19} Sep. \\
-		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & \Int{28}{26} Sep. \\
-		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     & \Int{ 5}{ 3} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{10} Oct. \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & \Int{14}{10} Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{17} Sep. \\
+		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & \Int{28}{24} Sep. \\
+		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     & \Int{ 5}{ 1} Oct. \\
+	\noclass{AST Closed on Monday)}                                      & \Int{2 }{ 8} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{15} Oct. \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
 	\reminder{First paper is \textbf{due} before midnight on the sixth day of class}{}       \\
-		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{17} Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & \Int{26}{24} Oct. \\
-	\noclass{Term Break (Monday to Friday)}                              & \Int{2 Nov.}{31 Oct.} \\
-		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     & \Int{ 9}{ 7} Nov. \\ [1ex]
+		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{22} Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & \Int{26}{29} Oct. \\
+		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     & \Int{ 9}{ 5} Nov. \\ [1ex]
+	\noclass{AST Closed on Monday)}                                      & \Int{2 }{12} Nov. \\
 
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & \Int{16}{14} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & \Int{23}{21} Nov. \\ [1ex]
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & \Int{16}{19} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & \Int{23}{26} Nov. \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
 	\reminder{Second paper is \textbf{due} before midnight on the eleventh day of class}{}   \\
-		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & \Int{30}{28} Nov. \\
-		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        & \Int{ 7}{ 5} Dec. \\ [1ex]
+		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & \Int{30}{ 3} Dec. \\
+		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        & \Int{ 7}{10} Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
 
