--- a/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
+++ b/HB/HB 3113(Int)-Ten Commandments-Driver 2018.tex
@@ -191,7 +191,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	class (10 \AM\ Atlantic Time). Answer the week's question by the end
 	of Tuesday. Then, by the end of Wednesday, read through the
 	responses of your classmates, and post another 50 words or so as you
-	interact with of them.
+	interact with them.
 
 	\item Students are to make a \textbf{creative presentation} on one
 	of the Ten Commandments in the week in which that Commandment is
