--- a/HEBR/2013-Hebrew-I.tex
+++ b/HEBR/2013-Hebrew-I.tex
@@ -73,7 +73,7 @@ All required textbooks are available in the Tyndale Bookstore.
     \emph{A Biblical Hebrew Reader: With an Outline Grammar}.
     Leuven: Peeters, 2017. ISBN 978-9042934900.
 
-    \bibitem[BSH]{bhs}
+    \bibitem[BHS]{bhs}
     \emph{Biblia Hebraica Stuttgartensia}.
     Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997. ISBN 978-1598561630.
     A paperback edition, marketed to students, is also available.
