--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -140,10 +140,10 @@ have been placed on a 2-hour reserve.
 \end{thebibliography}
 \endgroup
 
-An acceptable alternative study Bible is the NJPS: Adele Berlin and Marc
-Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
-(Oxford: Oxford University Press, 2014). A reference copy is
-available in the library, and it is well worth consulting.
+An good alternative study Bible is the NJPS: Adele Berlin and Marc Zvi
+Brettler, eds., \emph{The Jewish Study Bible: Second Edition} (Oxford:
+Oxford University Press, 2014). A reference copy is available in the
+library, and it is well worth consulting.
 
 \section{Supplementary Texts}
 \label{supplementary}
@@ -151,10 +151,9 @@ available in the library, and it is well worth consulting.
 Supplementary readings will be recommended throughout the semester.
 Excerpts from this literature will either be placed on reserve or made
 available through the course website. Give this material some good
-attention and effort. Some readings may have assignments attached to
-them. Even if not, they represent some of the best contemporary readers
-of the HB/OT, and you will not want to miss out on their hermeneutical
-and theological insights.
+attention and effort. It represents some of the best contemporary
+readers of the HB/OT, and you will not want to miss out on their
+insights.
 
 In addition, the following reference works are worth owning and
 consulting. First, \cite{rlgs} includes sound advice on things like
@@ -174,9 +173,9 @@ alike.
 	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
 	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649.
-	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{The Chicago Manual of Style}},
-	which is the standard at AST, there is also a free
-	“\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for \emph{The SBL Handbook of Style}, Second Edition}.”
+	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{Chicago Style}}
+	(the standard at AST), there is also a free
+	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}.
 
 \end{thebibliography}
 \endgroup
@@ -204,18 +203,18 @@ the needs of the class.
 
 		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & \Int{14}{10} Sep. \\
 		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{17} Sep. \\
-		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & \Int{28}{24} Sep. \\
-		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     & \Int{ 5}{ 1} Oct. \\
-	\noclass{AST Closed on Monday)}                                      & \Int{2 }{ 8} Oct. \\
+		& Exodus 1--34         & \HBFB{65--75}   & C. Mathews McGinnis   & \Int{28}{24} Sep. \\
+		& Leviticus 1--16      & \HBFB{77--83}   & Gary Anderson         & \Int{ 5}{ 1} Oct. \\
+	\noclass{AST Closed on Monday}                                       & \Int{2 }{ 8} Oct. \\
 		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{15} Oct. \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
 	\reminder{First paper is \textbf{due} before midnight on the sixth day of class}{}       \\
 		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{22} Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & \Int{26}{29} Oct. \\
-		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     & \Int{ 9}{ 5} Nov. \\ [1ex]
-	\noclass{AST Closed on Monday)}                                      & \Int{2 }{12} Nov. \\
+		& 1 \& 2 Samuel        & \HBFB{123--134} & Stephen Chapman       & \Int{26}{29} Oct. \\
+		& 1 \& 2 Kings         & \HBFB{135--143} & Robert Alter          & \Int{ 9}{ 5} Nov. \\ [1ex]
+	\noclass{AST Closed on Monday}                                       & \Int{2 }{12} Nov. \\
 
 		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & \Int{16}{19} Nov. \\
 		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & \Int{23}{26} Nov. \\ [1ex]
