updates at end of day

--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -41,13 +41,13 @@
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Mondays, 3:45--4:45 \PM}
+\officehours{Thursdays, 12:30--2:00 \PM}
 
 \semester{Fall Term 2018}
 \meets{\Int{Thursdays}{Mondays}}% \meets{on}{at}{in}
       {1:00--3:30 \PM}
       {Flahiff Room}
-\website{astheology.ns.ca}
+\website{danieldriver.com}
 \cdescription{% copy from the current Academic Calendar
 	The First Testament of Christian Scripture, also called the Hebrew
 	Bible or Old Testament, is a fundamental part of Christian tradition
@@ -150,17 +150,15 @@ library, and it is well worth consulting.
 
 Supplementary readings will be recommended throughout the semester.
 Excerpts from this literature will either be placed on reserve or made
-available through the course website. Give this material some good
-attention and effort. It represents some of the best contemporary
-readers of the HB/OT, and you will not want to miss out on their
+available through the course website. Give this material good effort and
+attention. It represents some of the best contemporary readers of the
+Bible, and you will not want to miss their hermeneutical and theological
 insights.
 
 In addition, the following reference works are worth owning and
-consulting. First, \cite{rlgs} includes sound advice on things like
-reading religious texts, writing essays and book reviews, making oral
-presentations, and learning languages. Second, \cite{sbl2} is a standard
-reference in the field, useful to beginning students and specialists
-alike.
+consulting, especially \cite{rlgs}. It contains sound advice on many
+core skills, including how to read religious texts, write essays and
+reviews, make oral presentations, and learn languages.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -168,7 +166,7 @@ alike.
 
 	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
-	3rd ed. Don Mills, ON: Oxford University Press, 2019. ISBN 978-0199026838.
+	3rd ed. Toronto: Oxford University Press, 2019. ISBN 978-0199026838.
 
 	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
@@ -201,31 +199,31 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & \Int{14}{10} Sep. \\
+		& Genesis 1--11        & \HBFB{1--26}    & Christopher Seitz     & \Int{14}{10} Sep. \\
 		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{17} Sep. \\
 		& Exodus 1--34         & \HBFB{65--75}   & C. Mathews McGinnis   & \Int{28}{24} Sep. \\
 		& Leviticus 1--16      & \HBFB{77--83}   & Gary Anderson         & \Int{ 5}{ 1} Oct. \\
 	\noclass{AST Closed on Monday}                                       & \Int{2 }{ 8} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{15} Oct. \\ [1ex]
+		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{15} Oct. \\
+	\reminder{First paper is \textbf{due} by the end of the fifth week of class}{19 Oct.}    \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-	\reminder{First paper is \textbf{due} before midnight on the sixth day of class}{}       \\
 		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{22} Oct. \\
 		& 1 \& 2 Samuel        & \HBFB{123--134} & Stephen Chapman       & \Int{26}{29} Oct. \\
-		& 1 \& 2 Kings         & \HBFB{135--143} & Robert Alter          & \Int{ 9}{ 5} Nov. \\ [1ex]
+		& 1 \& 2 Kings         & \HBFB{135--143} & Robert Alter          & \Int{ 9}{ 5} Nov. \\
 	\noclass{AST Closed on Monday}                                       & \Int{2 }{12} Nov. \\
-
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & \Int{16}{19} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & \Int{23}{26} Nov. \\ [1ex]
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Ellen Davis           & \Int{16}{19} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Alan Cooper           & \Int{23}{26} Nov. \\
+	\reminder{First paper is \textbf{due} by the end of the tenth week of class}{30 Nov.}    \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-	\reminder{Second paper is \textbf{due} before midnight on the eleventh day of class}{}   \\
-		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & \Int{30}{ 3} Dec. \\
-		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        & \Int{ 7}{10} Dec. \\ [1ex]
+		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & N. deClaissé-Walford & \Int{30}{ 3} Dec. \\
+		& Ecclesiastes         & \HBFB{203--246} & Michael V. Fox        & \Int{ 7}{10} Dec. \\
+	\reminder{Take-home exam is \textbf{due} by the end of the last day of class}{10 Dec.}   \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
+	\reminder{End of Term: Final marks are due for all courses}{14 Dec.} \\
 
 	\bottomrule
   \end{tabular}
@@ -243,35 +241,35 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 \begin{enumerate}
 
-	\item I will set \textbf{reading prompts} throughout the semester.
-	They are designed to ensure that you have read the assigned material
-	carefully, and to help you explore its significance. Prompt
-	responses submitted online should be between 250 and 300 words long.
+	\item \textbf{Reading prompts} will be given throughout the
+	semester. They are low-risk writing exercises that are designed to
+	encourage careful reading of the assigned material, and to help
+	explore its significance. They are not marked (although points may
+	be deducted if the exercise is not taken seriously), and there is no
+	length requirement. In general, prompt responses submitted online
+	should not exceed 300 words.
 
 %	\item Students are to \textbf{memorize ten verses from the Psalms}
 %	in the King James Version and recite them to me privately by the
 %	last day of class. You may select ten verses from one psalm, one
 %	verse from ten psalms, or any combination in between.
 
-	\item Two \textbf{short papers} will facilitate student reflection
-	on two extended works of biblical interpretation, one by
-	\cite{heschel} and one by \cite{irenaeus}. Each should be 3,000
-	words long. They are due on the sixth and eleventh days of class,
-	respectively.
+	\item Two \textbf{short papers} will facilitate student engagement
+	with the art of biblical interpretation. One invites reflection on
+	the exposition of an established scholar, and the other allows the
+	practice of exegesis on a short biblical text. Each should be 2,250
+	words long (± 10\%). They are due at the end of the fifth and tenth
+	weeks of class, respectively.
 
 	\begin{enumerate}
 
-		\item The \textbf{first paper} will articulate and evaluate
-		multiple rationales for sabbath observance by interacting with
-		biblical and post-biblical traditions. The latter must include,
-		but need not be limited to, Heschel's \emph{The Sabbath}.
+		\item An \textbf{review essay} will …
+		It must develop and defend a coherent thesis about that instance
+		of interpretation.
 
-		\item The \textbf{second paper} will explore Irenaeus' use of
-		the Old Testament as Christian scripture by: succinctly
-		summarizing \emph{On the Apostolic Preaching}, selecting a
-		characteristic example of biblical interpretation in that work,
-		and then developing and defending a coherent thesis about that
-		instance of interpretation.
+		\item An \textbf{exegetical essay} will … It must develop and
+		defend a coherent thesis about an appropriately short,
+		well-chosen text from the HB/OT.
 
 	\end{enumerate}
 
@@ -302,10 +300,9 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Prompts & 25\% \\
-%    Memorization    & 10\% \\
-    First Paper     & 25\% \\
-    Second Paper    & 25\% \\
+    Reading Prompts  & 25\% \\
+    Review Essay     & 25\% \\
+    Exegetical Essay & 25\% \\
     \Int{Online}{Seminar} Presentation & 25\% \\
     \bottomrule
   \end{tabular}}
