--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.5-WIP]{BF 1001}
+\coursecode[3.4]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -48,7 +48,7 @@
       {1:00--3:30 \PM}
       {Flahiff Room}
 \website{danieldriver.com}
-\cdescription{% copy from the current Academic Calendar
+\cdescription[none. The course is required for HB courses at or above the 3000-level]{% copy from the current Academic Calendar; [] for prereqs
 	The First Testament of Christian Scripture, also called the Hebrew
 	Bible or Old Testament, is a fundamental part of Christian tradition
 	and durable rule of faith and practice. Students in this course will
@@ -126,17 +126,6 @@ have been placed on a 2-hour reserve.
 	Nashville: Abingdon Press, 2015.
 	ISBN 978-1426775635.
 
-%	\bibitem[Heschel]{heschel} Abraham Heschel.
-%	\emph{The Sabbath: Its Meaning for Modern Man}.
-%	New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
-%	ISBN 978-0374529758.
-
-%	\bibitem[Irenaeus]{irenaeus} St Irenaeus of Lyons.
-%	\emph{On the Apostolic Preaching}.
-%	Trans. John Behr.
-%	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
-%	ISBN 978-0881411744.
-
 \end{thebibliography}
 \endgroup
 
@@ -155,10 +144,10 @@ attention. It represents some of the best contemporary readers of the
 Bible, and you will not want to miss their hermeneutical and theological
 insights.
 
-In addition, the following reference works are worth owning and
-consulting, especially \cite{rlgs}. It contains sound advice on many
-core skills, including how to read religious texts, write essays and
-reviews, make oral presentations, and learn languages.
+Also, the following reference works are worth owning and consulting.
+\cite{rlgs} in particular contains sound advice on core skills like
+reading religious texts, writing essays and reviews, revising essays,
+making oral presentations, and learning languages.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -199,29 +188,28 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Christopher Seitz     & \Int{14}{10} Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{17} Sep. \\
-		& Exodus 1--34         & \HBFB{65--75}   & C. Mathews McGinnis   & \Int{28}{24} Sep. \\
-		& Leviticus 1--16      & \HBFB{77--83}   & Gary Anderson         & \Int{ 5}{ 1} Oct. \\
-	\noclass{AST Closed on Monday}                                       & \Int{2 }{ 8} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{15} Oct. \\
-	\reminder{First paper is \textbf{due} by the end of the fifth week of class}{19 Oct.}    \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & Christopher Seitz   & \Int{14}{10} Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson        & \Int{21}{17} Sep. \\
+		& Exodus 1--34         & \HBFB{65--75}   & C. Mathews McGinnis & \Int{28}{24} Sep. \\
+		& Leviticus 1--16      & \HBFB{77--83}   & Gary Anderson       & \Int{ 5}{ 1} Oct. \\
+	\noclass{AST Closed on Monday}                                     & \Int{2 }{ 8} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly      & \Int{12}{15} Oct. \\
+	\reminder{A first short paper is \textbf{due} by the end of the fifth week of class}{19 Oct.}    \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{22} Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--134} & Stephen Chapman       & \Int{26}{29} Oct. \\
-		& 1 \& 2 Kings         & \HBFB{135--143} & Robert Alter          & \Int{ 9}{ 5} Nov. \\
-	\noclass{AST Closed on Monday}                                       & \Int{2 }{12} Nov. \\
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Ellen Davis           & \Int{16}{19} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Alan Cooper           & \Int{23}{26} Nov. \\
-	\reminder{First paper is \textbf{due} by the end of the tenth week of class}{30 Nov.}    \\ [1ex]
+		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible      & \Int{19}{22} Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--134} & Stephen Chapman     & \Int{26}{29} Oct. \\
+		& 1 \& 2 Kings         & \HBFB{135--143} & Robert Alter        & \Int{ 9}{ 5} Nov. \\
+	\noclass{AST Closed on Monday}                                     & \Int{2 }{12} Nov. \\
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Ellen Davis         & \Int{16}{19} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Alan Cooper         & \Int{23}{26} Nov. \\
+	\reminder{A second short paper is \textbf{due} by the end of the tenth week of class}{30 Nov.}    \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & N. deClaissé-Walford & \Int{30}{ 3} Dec. \\
-		& Ecclesiastes         & \HBFB{203--246} & Michael V. Fox        & \Int{ 7}{10} Dec. \\
-	\reminder{Take-home exam is \textbf{due} by the end of the last day of class}{10 Dec.}   \\ [1ex]
+		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & N. deClaissé-Walford & \Int{30}{ 3} Dec. \\
+		& Ecclesiastes         & \HBFB{203--246} & Michael V. Fox      & \Int{ 7}{10} Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{14 Dec.} \\
 
@@ -242,34 +230,38 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 \begin{enumerate}
 
 	\item \textbf{Reading prompts} will be given throughout the
-	semester. They are low-risk writing exercises that are designed to
-	encourage careful reading of the assigned material, and to help
-	explore its significance. They are not marked (although points may
-	be deducted if the exercise is not taken seriously), and there is no
-	length requirement. In general, prompt responses submitted online
-	should not exceed 300 words.
-
-%	\item Students are to \textbf{memorize ten verses from the Psalms}
-%	in the King James Version and recite them to me privately by the
-%	last day of class. You may select ten verses from one psalm, one
-%	verse from ten psalms, or any combination in between.
+	semester. They are low-risk writing exercises designed to encourage
+	careful reading of the assigned material, and to help explore its
+	significance. They are not marked (although points may be deducted
+	if the exercise is not taken seriously), and there is no length
+	requirement. In general, prompt responses submitted online should
+	not exceed 300 words.
 
 	\item Two \textbf{short papers} will facilitate student engagement
-	with the art of biblical interpretation. One invites reflection on
-	the exposition of an established scholar, and the other allows the
-	practice of exegesis on a short biblical text. Each should be 2,250
-	words long (± 10\%). They are due at the end of the fifth and tenth
-	weeks of class, respectively.
+	with the art of biblical interpretation. One is keyed to the
+	exposition of a scholar, the other to a short biblical text. Each
+	should be about 2,000 words in length. Either paper (your choice) is
+	due at the end of the fifth week of class; the remaining one is due
+	at the end of the tenth week.
 
 	\begin{enumerate}
 
-		\item An \textbf{review essay} will …
-		It must develop and defend a coherent thesis about that instance
-		of interpretation.
+		\item A \textbf{review essay} invites student reflection on a
+		model work of biblical interpretation, to be selected from the
+		supplementary articles. Note that a review is not the same thing
+		as a report. Devote the first half of the paper to a summary the
+		argument under review, and the second half to critical analysis
+		and evaluation of the same. Be fair, but do not fail to take a
+		position. The paper needs to develop a thesis. See me and
+		\cite[Chs 3, 5–7, 11]{rlgs} for guidance.
 
-		\item An \textbf{exegetical essay} will … It must develop and
-		defend a coherent thesis about an appropriately short,
-		well-chosen text from the HB/OT.
+		\item An \textbf{exegetical essay} provides an opportunity for
+		direct work with the biblical text. The first task is to
+		identify an appropriate text. Select a suitably short passage
+		from the HB/OT. Then, conduct an analysis and explication of it.
+		Interact with \cite{hbfb} and at least two other commentators.
+		Advance a thesis that relates to the text itself. See me and
+		\cite[Chs 3, 5, 8, 11]{rlgs} for guidance.
 
 	\end{enumerate}
 
@@ -282,12 +274,15 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 	spent helping other readers elaborate, reflect on, test, challenge,
 	or extend the main ideas presented there.
 }{
-	\item Each student will \textbf{lead a seminar} on one of the twelve
-	supplementary articles. The discussion, which should last 30
-	minutes, should begin with a brief (5~min) summary of the article.
-	The balance of the time should be spent helping the class elaborate,
-	reflect on, test, challenge, or extend the main ideas presented
-	there.
+	\item Each student will lead a \textbf{seminar discussion} of one
+	chapter from the HB/OT, freely chosen from a week's primary reading.
+	The discussion should last about 25~minutes. It needs to begin with
+	a brief (5~min) \textbf{outline} of the chapter. Outlines must be
+	original, not borrowed from commentators. They should be circulated
+	as handouts and explained orally. The balance of the time should be
+	spent helping the class discover, elaborate, reflect on, test, or
+	otherwise explore the meaning of the passage. Critical to success
+	here is the ability to ask good questions of the Bible.
 }
 
 \end{enumerate}
@@ -300,17 +295,21 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Prompts  & 25\% \\
-    Review Essay     & 25\% \\
-    Exegetical Essay & 25\% \\
-    \Int{Online}{Seminar} Presentation & 25\% \\
+    Reading Prompts  & 20\% \\
+    Review Essay     & 30\% \\
+    Exegetical Essay & 30\% \\
+    \Int{Online}{Seminar} Discussion & 20\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
   \label{grade-dist}
 \end{table}
 
-\input{\policy/grades}
+AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
+Calendar} provides guidelines and detailed criteria for academic
+assessment. Marks are assigned by letter grade using these benchmarks.
+
+%\input{\policy/grades}
 \input{\policy/other}
 
 \end{document}
