--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -193,7 +193,7 @@ the needs of the class.
 		& Exodus 1--34         & \HBFB{65--75}   & C. Mathews McGinnis & \Int{28}{24} Sep. \\
 		& Leviticus 1--16      & \HBFB{77--83}   & Gary Anderson       & \Int{ 5}{ 1} Oct. \\
 	\noclass{AST Closed on Monday}                                     & \Int{2 }{ 8} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly      & \Int{12}{15} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & Walter Moberly      & \Int{12}{15} Oct. \\
 	\reminder{A first short paper is \textbf{due} by the end of the fifth week of class}{19 Oct.}    \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
@@ -203,7 +203,7 @@ the needs of the class.
 		& 1 \& 2 Kings         & \HBFB{135--143} & Robert Alter        & \Int{ 9}{ 5} Nov. \\
 	\noclass{AST Closed on Monday}                                     & \Int{2 }{12} Nov. \\
 		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Ellen Davis         & \Int{16}{19} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Alan Cooper         & \Int{23}{26} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & James Nogalski      & \Int{23}{26} Nov. \\
 	\reminder{A second short paper is \textbf{due} by the end of the tenth week of class}{30 Nov.}    \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
