add a course bibliography

--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -137,12 +137,11 @@ library, and it is well worth consulting.
 \section{Supplementary Texts}
 \label{supplementary}
 
-Supplementary readings will be recommended throughout the semester.
-Excerpts from this literature will either be placed on reserve or made
-available through the course website. Give this material good effort and
-attention. It represents some of the best contemporary readers of the
-Bible, and you will not want to miss their hermeneutical and theological
-insights.
+Supplementary readings will be recommended throughout the semester and
+either placed on reserve or made available through the course website.
+See \autoref{bib}. Give this material good effort and attention. It
+represents some of the best contemporary readers of the Bible, and you
+will not want to miss their hermeneutical and theological insights.
 
 Also, the following reference works are worth owning and consulting.
 \cite{rlgs} in particular contains sound advice on core skills like
@@ -166,7 +165,6 @@ making oral presentations, and learning languages.
 
 \end{thebibliography}
 \endgroup
-
 
 
 \section{Course Outline}
@@ -305,11 +303,84 @@ The breakdown for the semester's total work is shown in
   \label{grade-dist}
 \end{table}
 
-AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
-Calendar} provides guidelines and detailed criteria for academic
-assessment. Marks are assigned by letter grade using these benchmarks.
+%AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
+%Calendar} provides guidelines and detailed criteria for academic
+%assessment. Marks are assigned by letter grade using these benchmarks.
 
-%\input{\policy/grades}
+\input{\policy/grades}
 \input{\policy/other}
+
+\section{Bibliography}
+\label{bib}
+
+Literature on the Bible is vast. The works listed here have been
+selected for clarity, insight, and theological alertness. Some will be
+distributed as supplementary texts, as per \autoref{supplementary}. All
+of them model compelling, highly competent ways of reading the HB/OT.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{99}
+
+\bibitem{ra81} Alter, Robert. “The Techniques of Repetition.” Pages 88–113 in \emph{The Art of Biblical Narrative}. New York: Basic Books, 1981.
+
+\bibitem{ga01} Anderson, Gary A. “Biblical Origins and the Fall.” Pages 197–210 in \emph{The Genesis of Perfection: Adam and Eve in Jewish and Christian Imagination}. Louisville: Westminster John Knox, 2001.
+
+\bibitem{ga17} Anderson, Gary A. “Apophatic Theology: The Transcendence of God and the Story of Nadab and Abihu.” Pages 3–22 in \emph{Christian Doctrine and the Old Testament: Theology in the Service of Biblical Exegesis}. Grand Rapids: Baker Academic, 2017.
+
+\bibitem{bz09} Ben Zvi, Ehud and James D. Nogalski. \emph{Two Sides of a Coin: Juxtaposing Views on Interpreting the Book of the Twelve / the Twelve Prophetic Books}. Analecta Gorgiana 201. Piscataway, NJ: Gorgias, 2009.
+
+\bibitem{sc16} Chapman, Stephen B. “1 Samuel 1–12.” Pages 71–119 in \emph{1 Samuel as Christian Scripture: A Theological Commentary}. Grand Rapids: Eerdmans, 2016.
+
+\bibitem{bc79} Childs, Brevard S. \emph{Introduction to the Old Testament as Scripture}. Philadelphia: Fortress, 1979.
+
+\bibitem{bc92} Childs, Brevard S. \emph{Biblical Theology of the Old and New Testaments: Theological Reflection on the Christian Bible}. Minneapolis: Fortress, 1992.
+
+\bibitem{bc04} Childs, Brevard S. \emph{The Struggle to Understand Isaiah as Christian Scripture}. Grand Rapids: Eerdmans, 2004.
+
+\bibitem{ed03} Davis, Ellen F. “Teaching the Bible Confessionally in the Church.” Pages 9–26 in \emph{The Art of Reading Scripture}. Edited by Ellen F. Davis and Richard B. Hays. Grand Rapids: Eerdmans, 2003.
+
+\bibitem{ed14} Davis, Ellen F. \emph{Biblical Prophecy: Perspectives for Christian Theology, Discipleship, and Ministry}. Louisville: Westminster John Knox, 2014.
+
+\bibitem{ndw14} deClaissé-Walford, Nancy L. “The Meta-Narrative of the Psalter.” Pages 363–76 in \emph{The Oxford Handbook of the Psalms}. Edited by William P. Brown. Oxford: Oxford University Press, 2014.
+
+\bibitem{kd13} Dell, Katherine J. “Ecclesiastes as Wisdom: Consulting Early Interpreters.” Pages 9–36 in \emph{Interpreting Ecclesiastes: Readers Old and New}. Winona Lake, IN: Eisenbrauns, 2013.
+
+\bibitem{mf04} Fox, Michael V. \emph{The JPS Bible Commentary: Ecclesiastes}. Philadelphia: Jewish Publication Society, 2004.
+
+\bibitem{ah51} Heschel, Abraham Joshua. \emph{The Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and Giroux, 1951.
+
+\bibitem{il97} Irenaeus of Lyons. \emph{On the Apostolic Preaching}. Translated by John Behr. Popular Patristics Series 17. St Vladimir’s Seminary Press, 1997.
+
+\bibitem{bj13} Janowski, Bernd. \emph{Arguing with God: A Theological Anthropology of the Psalms}. Louisville: Westminster John Knox, 2013.
+
+\bibitem{jl85} Levenson, Jon D. \emph{Sinai and Zion: An Entry into the Jewish Bible}. Minneapolis: Winston, 1985.
+
+\bibitem{jl12} Levenson, Jon D. “The Test.” Pages 66–112 in \emph{Inheriting Abraham: The Legacy of the Patriarch in Judaism, Christianity, and Islam}. Princeton: Princeton University Press, 2012.
+
+\bibitem{nm09} MacDonald, Nathan. “Israel and the Old Testament Story in Irenaeus’s Presentation of the Rule of Faith.” \emph{Journal of Theological Interpretation} 3.2 (2009): 281–98.
+
+\bibitem{cmm12} Mathews McGinnis, Claire. “The Hardening of Pharaoh’s Heart in Christian and Jewish Interpretation.” \emph{Journal of Theological Interpretation} 6.1 (2012): 43–64.
+
+\bibitem{wm92} Moberly, R. W. L. \emph{The Old Testament of the Old Testament: Patriarchal Narratives and Mosaic Yahwism}. Minneapolis: Fortress, 1992.
+
+\bibitem{wm13} Moberly, R. W. L. “A Love Supreme.” Pages 7–40 in \emph{Old Testament Theology: Reading the Hebrew Bible as Christian Scripture}. Grand Rapids: Baker Academic, 2013.
+
+\bibitem{jn07a} Nogalski, James D. “Reading the Book of the Twelve Theologically.” \emph{Interpretation} 61.2 (2007): 115–22.
+
+\bibitem{jn07b} Nogalski, James D. “Recurring Themes in the Book of the Twelve: Creating Points of Contact for a Theological Reading.” \emph{Interpretation} 61.2 (2007): 125–36.
+
+\bibitem{db89} Patrick, Dale. “Studying Biblical Law as a Humanities.” \emph{Semeia} 45 (1989): 27–47.
+
+\bibitem{cs96} Seitz, Christopher R. “Old Testament or Hebrew Bible? Some Theological Considerations.” \emph{Pro Ecclesia} 5.3 (1996): 292–303.
+
+\bibitem{cs18} Seitz, Christopher R. “‘Can We Read This Book?’ Reader Response-ability.” Pages 51–68 in \emph{The Elder Testament: Canon, Theology, Trinity}. Waco, TX: Baylor University Press, 2018.
+
+\bibitem{gs92} Sheppard, Gerald T. “Theology and the Book of Psalms.” \emph{Interpretation} 46.2 (1992): 143–55.
+
+\bibitem{pt84} Trible, Phyllis. “An Unnamed Woman: The Extravagance of Violence.” Pages 65–91 in \emph{Texts of Terror: Literary-Feminist Readings of Biblical Narratives}. Overtures to Biblical Theology. Philadelphia: Fortress, 1984.
+
+\end{thebibliography}
+\endgroup
 
 \end{document}
