correct MV Fox citation

--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -346,7 +346,7 @@ of them model compelling, highly competent ways of reading the HB/OT.
 
 \bibitem{kd13} Dell, Katherine J. “Ecclesiastes as Wisdom: Consulting Early Interpreters.” Pages 9–36 in \emph{Interpreting Ecclesiastes: Readers Old and New}. Winona Lake, IN: Eisenbrauns, 2013.
 
-\bibitem{mf04} Fox, Michael V. \emph{The JPS Bible Commentary: Ecclesiastes}. Philadelphia: Jewish Publication Society, 2004.
+\bibitem{mf04} Fox, Michael V. \emph{Ecclesiastes: The Traditional Hebrew Text with the New JPS Translation}. The JPS Bible Commentary. Philadelphia: Jewish Publication Society, 2004.
 
 \bibitem{ah51} Heschel, Abraham Joshua. \emph{The Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and Giroux, 1951.
 
