final versions of Fall 2018 syllabi

--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -222,8 +222,7 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 \section{Evaluation}
 \label{evaluation}
 
-\subsection{Grade Structure for \ccode}
-\label{structure}
+The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
