fill out course history

--- a/HB/HB 2201-Driver 2018.tex
+++ b/HB/HB 2201-Driver 2018.tex
@@ -16,9 +16,9 @@
 \coursetitle[Hebrew Bible]{Beginning Biblical Hebrew I}
 
 % Taught as HEBR 2013 in:
-%   -
-%   -
-%   -
+%   - Fall 2009
+%   - Fall 2011
+%   - Fall 2013
 %   - Fall 2015
 % Taught as HB 2201 in:
 %   - Fall 2018
